<resources>
    <string name="app_name">Ideas Meet Finance</string>
    <string name="imf_text">IMF</string>
    <string name="ideas_meet_finance_text">Ideas Meet Finance</string>
    <string name="logo_text">Logo</string>
    <string name="title_activity_navigate">navigate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--    <string name="pwd"> Password </string>-->
    <!--    <string name="username"> User Name </string>-->
    <!--    <string name="regbtn"> REGISTER </string>-->
    <!--    <string name="name"> Name </string>-->
    <!--    <string name="Financer"> Financer </string>-->
    <!--    <string name="email"> Email </string>-->
    <!--    <string name="Enterpreneur">Enterpreneur</string>-->
    <string name="email"> E-Mail </string>
    <string name="pwd"> Password </string>
    <string name="DalId">Username</string>
    <string name="regbtn"> REGISTER </string>
    <string name="name"> Name </string>
    <string name="StudentRadioBtn">Financer</string>
    <string name="ProfessorRadioBtn">Entrepreneur</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">login</string>
    <string name="register_text">Register</string>
    <string name="todo_text">TODO</string>
    <string name="post_ideas">Post your ideas here</string>
    <string name="title_idea">Title of the idea</string>
    <string name="idea_abstract">Abstract</string>
    <string name="idea_content">Content</string>
    <string name="post_idea">Post Idea</string>
</resources>
