<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="274dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:src="@drawable/ideas"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo_text">

    </ImageView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxemail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="10dp"
        android:layout_below="@id/appLogo"
        android:hint="@string/email_text" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblEmail"
            android:layout_centerHorizontal="true"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxpassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="10dp"
        android:layout_below="@id/boxemail"
        android:hint="@string/password_text"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblPassword"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/boxpassword"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/register_text" />

</RelativeLayout>