<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".SplashActivity">


    <ImageView
        android:id="@+id/splashImage"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150sp"
        android:contentDescription="@string/logo_text">
    </ImageView>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:text="@string/imf_text"
        android:fontFamily="serif"
        android:textSize="50sp"
        android:textColor="@color/colorRed"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/appName"
        android:text="@string/ideas_meet_finance_text"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:fontFamily="serif"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">
    </TextView>
</RelativeLayout>