<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PostIdeas">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="70dp"
        android:textSize="30dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/post_ideas">
    </TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="20dp"
        android:hint="@string/title_idea"
        app:boxStrokeColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idea_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="20dp"
        android:hint="@string/idea_abstract"
        app:boxStrokeColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idea_abstract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="20dp"
        android:hint="@string/idea_content"
        app:boxStrokeColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idea_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="8"
            android:gravity="top|left"
            android:scrollbars="vertical"
            android:maxLines="20">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
        android:text="@string/post_idea"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>


</LinearLayout>